// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for theme: false 1`] = `
":host {
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --p-internal-select-option-padding-left: 28px;
  --p-internal-multi-select-option-padding-left: 28px;
}
[role="group"] {
  display: flex;
  flex-direction: column;
  gap: max(2px, var(--p-internal-optgroup-scaling, 1) * 8px);
}
[role="presentation"] {
  padding: max(2px, var(--p-internal-optgroup-scaling, 1) * 8px) max(4px, var(--p-internal-optgroup-scaling, 1) * 12px);
  font: normal normal 600 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #010205;
}"
`;

exports[`getComponentCss() > should return correct css for theme: false 2`] = `
":host {
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --p-internal-select-option-padding-left: 28px;
  --p-internal-multi-select-option-padding-left: 28px;
}
[role="group"] {
  display: flex;
  flex-direction: column;
  gap: max(2px, var(--p-internal-optgroup-scaling, 1) * 8px);
}
[role="presentation"] {
  padding: max(2px, var(--p-internal-optgroup-scaling, 1) * 8px) max(4px, var(--p-internal-optgroup-scaling, 1) * 12px);
  font: normal normal 600 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #FBFCFF;
}"
`;

exports[`getComponentCss() > should return correct css for theme: true 1`] = `
":host {
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --p-internal-select-option-padding-left: 28px;
  --p-internal-multi-select-option-padding-left: 28px;
}
[role="group"] {
  display: flex;
  flex-direction: column;
  gap: max(2px, var(--p-internal-optgroup-scaling, 1) * 8px);
}
[role="presentation"] {
  padding: max(2px, var(--p-internal-optgroup-scaling, 1) * 8px) max(4px, var(--p-internal-optgroup-scaling, 1) * 12px);
  font: normal normal 600 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #949598;
}"
`;

exports[`getComponentCss() > should return correct css for theme: true 2`] = `
":host {
  color-scheme: light dark !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --p-internal-select-option-padding-left: 28px;
  --p-internal-multi-select-option-padding-left: 28px;
}
[role="group"] {
  display: flex;
  flex-direction: column;
  gap: max(2px, var(--p-internal-optgroup-scaling, 1) * 8px);
}
[role="presentation"] {
  padding: max(2px, var(--p-internal-optgroup-scaling, 1) * 8px) max(4px, var(--p-internal-optgroup-scaling, 1) * 12px);
  font: normal normal 600 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: #7E7F82;
}"
`;
